--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <div class="text-center" style="padding:2rem 0.5rem">      
                 <div><img src="./index_files/comprobado.png"></div>
                 <div style="font-size:1.2rem; padding:0.5rem; background: rgba(255,255,255, 0.7); line-height: 2rem; color: #1f484a;">
-                    <div>NUÑEZ TOMAYLLA SEVERO</div>
-                    <div> <b>DNI</b> 28XXXX61</div>
-                    <div style="color:#3e8d5e"><b>CON SEGUNDA DOSIS *</b></div>
+                    <div>YUCRA NUÑEZ ROY ANYELO</div>
+                    <div> <b>DNI</b> 61XXXX69</div>
+                    <div style="color:#3e8d5e"><b>CON CUARTA DOSIS *</b></div>
                 </div>
             </div>
             <div style="padding: 0.7rem 0 0.5rem; text-align: center;">
