--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div style="padding: 0.7rem 0 0.5rem; text-align: center;">
-                <div style="font-size: 1rem;padding:0.5rem;background: rgba(255,255,255, 0.7);">* Persona con dos dosis de vacuna contra COVID 19</div>    
+                <div style="font-size: 1rem;padding:0.5rem;background: rgba(255,255,255, 0.7);">* Persona con cuatro dosis de vacuna contra COVID 19</div>    
             </div>   
             <hr class="aLine1">
             <div class="text-center" style="color:#6c6c6c">
