--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                 <div style="font-size:1.2rem; padding:0.5rem; background: rgba(255,255,255, 0.7); line-height: 2rem; color: #1f484a;">
                     <div>YUCRA NUÑEZ ROY ANYELO</div>
                     <div> <b>DNI</b> 61XXXX69</div>
-                    <div style="color:#3e8d5e"><b>CON CUARTA DOSIS *</b></div>
+                    <div style="color:#3e8d5e"><b>CON DOS DOSIS *</b></div>
                 </div>
             </div>
             <div style="padding: 0.7rem 0 0.5rem; text-align: center;">
-                <div style="font-size: 1rem;padding:0.5rem;background: rgba(255,255,255, 0.7);">* Persona con cuatro dosis de vacuna contra COVID 19</div>    
+                <div style="font-size: 1rem;padding:0.5rem;background: rgba(255,255,255, 0.7);">* Persona con dos dosis de vacuna contra COVID 19</div>    
             </div>   
             <hr class="aLine1">
             <div class="text-center" style="color:#6c6c6c">
@@ -71,3 +71,4 @@
 
 
 </body></html>
+
